--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
             <div class="linea"></div>
                 <div class="conten-img">
                     <div class="imagen">
-                        <img src="./assets/fotos-tigre/DSC_0010.JPG" alt="">
+                        <img src="./assets/fotos-tigre/DSC_0010 (1).webp" alt="">
                         <div class="overlay">
                             <h2>Tréboles</h2>
                         </div>
                     </div>
                     <div class="imagen">
-                        <img src="./assets/fotos-tigre/DSC_0020.JPG" alt="">
+                        <img src="./assets/fotos-tigre/DSC_0020 (1).webp" alt="">
                         <div class="overlay">
                             <h2>Hongos</h2>
                         </div>
                     </div>
                     <div class="imagen">
                         <a href="./secciones/lulu.html">
-                            <img src="./assets/fotos-tigre/DSC_0041.JPG" alt="">
+                            <img src="./assets/fotos-tigre/DSC_0041 (1).webp" alt="">
                             <div class="overlay">
                                 <h2>Lulú</h2>
                             </div>
@@ -57,19 +57,19 @@
                         
                     </div>
                     <div class="imagen">
-                        <img src="./assets/fotos-tigre/DSC_0043.JPG" alt="">
+                        <img src="./assets/fotos-tigre/DSC_0043 (1).webp" alt="">
                         <div class="overlay">
                             <h2>El río</h2>
                         </div>
                     </div>
                     <div class="imagen">
-                        <img src="./assets/fotos-tigre/DSC_0090.JPG" alt="">
+                        <img src="./assets/fotos-tigre/DSC_0090 (1).webp" alt="">
                         <div class="overlay">
                             <h2>Rositas</h2>
                         </div>
                     </div>
                     <div class="imagen">
-                        <img src="./assets/fotos-tigre/DSC_0093.JPG" alt="">
+                        <img src="./assets/fotos-tigre/DSC_0093 (1).webp" alt="">
                         <div class="overlay">
                             <h2>Casita isleña</h2>
                         </div>
